<resources>
    <string name="app_name">SMBHelper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Setting</string>
    <string name="title_process">Process</string>
    <string name="title_order">Order</string>
    <string name="new_product_title">Title</string>
    <string name="new_product_description">Description</string>
    <string name="new_product_tax">Tax</string>
    <string name="new_product_cost">Cost</string>
    <string name="new_product_price">Price</string>
    <string name="new_product_inventory">Inventory Count</string>
    <string name="new_product_submit">Create Product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_product">Product</string>
    <string name="setting_customer">Customer</string>
    <string name="guide">Create User To Start \nIf You Have Account, Please Login</string>
    <string name="addcustomericon">addCustomerIcon</string>
    <string name="new_customer">New Customer</string>
    <string name="back_icon">back icon</string>
    <string name="new_customer_submit">Create Customer</string>
    <string name="temp_humen_name">First Last</string>
    <string name="customer_manage_orders_tag">Orders</string>
    <string name="temp_number">0</string>
    <string name="avatar">Avatar</string>
    <string name="add_icon">add icon</string>
    <string name="image">image</string>
    <string name="temp_product_name">Product Name</string>
    <string name="available">available</string>
    <string name="order_manage_new_order">new Order</string>
    <string name="order_manage_open_orders">Open orders</string>
    <string name="order_manage_closed_order_of_day">Closed order of day</string>
    <string name="temp_customer_name">Customer Name</string>
    <string name="temp_street">123 Main Street</string>
    <string name="temp_deu_time">14:00</string>
    <string name="temp_price">1499</string>
    <string name="new_order_title">New Order</string>
    <string name="save">Save</string>
    <string name="tag_items">Items</string>
    <string name="tag_customer">Customer</string>
    <string name="tag_note">Note</string>
    <string name="tag_delivery">Delivery</string>
    <string name="Tag_due_time">Due Time</string>
    <string name="tag_pick_up">Pick up</string>
    <string name="tag_time">Time</string>
    <string name="tag_date">Date</string>
    <string name="tag_more">more</string>
    <string name="tag_less">less</string>
    <string name="tag_dollor">$</string>
    <array name="assa">
        <item>1</item>
        <item>2</item>
    </array>
</resources>
