<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <TextView
        android:id="@+id/text_view_product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_product_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_view_Holder_item_product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_Holder_item_product_image"
        android:layout_width="80dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_view_holderitem_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/temp_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view_Holder_item_product_image"
        app:layout_constraintTop_toBottomOf="@+id/text_view_product_title" />

    <TextView
        android:id="@+id/text_view_holder_item_count"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/temp_number"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_holder_count_less"
        app:layout_constraintEnd_toStartOf="@+id/image_button_holder_count_less" />

    <ImageButton
        android:id="@+id/image_button_holder_count_more"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@color/bpWhite"
        android:contentDescription="@string/tag_more"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_holder_item_count"
        app:layout_constraintEnd_toStartOf="@+id/text_view_holder_item_count"
        app:srcCompat="@drawable/ic_add_square" />

    <ImageButton
        android:id="@+id/image_button_holder_count_less"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/bpWhite"
        android:contentDescription="@string/tag_less"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_less_square" />

    <TextView
        android:id="@+id/text_view_dollor_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_dollor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_holderitem_product_price"
        app:layout_constraintStart_toEndOf="@+id/text_view_holderitem_product_price" />
</android.support.constraint.ConstraintLayout>