<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="3dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_product_manage_title_image"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/text_product_manage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/temp_product_name"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/image_view_product_manage_title_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_product_manage_product_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:text="@string/temp_number"
            app:layout_constraintStart_toStartOf="@+id/text_product_manage_title"
            app:layout_constraintTop_toBottomOf="@+id/text_product_manage_title" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/available"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_view_product_manage_product_count"
            app:layout_constraintStart_toEndOf="@+id/text_view_product_manage_product_count" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>